<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Furnish Your Home</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Drawer Opened</string>
    <string name="drawer_close">Drawer Closed</string>
    <string name="action_search">Search</string>
    <string name="action_search_hint">Search...</string>
    <string name="desc_list_item_icon">Item Icon</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragmentHello blank fragment</string>
    <string name="title_activity_add_room">AddRoomActivity</string>
    <string name="google_maps_key">AIzaSyB5TpazgprmQJhHBBDl-POz4Ucq5Nibh3E</string>

    <!-- activity_add_room items -->
    <array name="spinnerItems">
        <item>-</item>
        <item>Bedroom</item>
        <item>Living room</item>
        <item>Kitchen</item>
        <item>Dining room</item>
        <item>Bathroom</item>
    </array>

    <string name="room_not_selected">Please choose room from the spinner below.</string>
    <string name="width">Width:</string>
    <string name="height">Height:</string>
    <string name="depth">Depth:</string>

    <string name="meters">meters</string>
    <!-- activity_add_room items -->

    <array name="tabs_three">
        <item>My Room</item>
        <item>My furniture</item>
        <item>Map</item>
    </array>

    <array name="tabs_two">
        <item>My Room</item>
        <item>Map</item>
    </array>
</resources>
